@@ -116,6 +116,8 @@ Version 1.3-svn:
    * removed manpages (outdated): Hungarian.
  * other:
    * --validcache runtime switch to force assumption that cache is valid
+   * add two new debug command set_var and show_var to check variables within
+   the game easily
  * Python AI
    * Added various input validations
    * Set Python errors upon error
